# overcast

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
overcast-client/: Cargo.toml
overcast-client/src/: camera.rs  config.rs  main.rs
overcast-client/src/networking/: mod.rs  network_manager.rs
overcast-core/: Cargo.toml  README.me
overcast-core/src/: lib.rs  log.rs
overcast-core/src/networking/: message.rs  mod.rs  serialization.rs
overcast-macros/: Cargo.toml
overcast-macros/src/: lib.rs
overcast-server/: Cargo.toml
overcast-server/src/: config.rs  main.rs
overcast-server/src/control_flow/: mod.rs
overcast-server/src/networking/: client.rs  mod.rs  network_manager.rs  remote_controller.rs  server.rs
overcast-server/src/player/: mod.rs  player_state.rs
overcast-web/: assets  build.sh  index.html  run.sh
overcast-web/js/: overcast.js
