[package]
name = "overcast-core"
version = "0.1.0"
authors.workspace = true
categories.workspace = true
edition.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
keywords.workspace = true
publish.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde = "1.0.196"
serde-binary = "0.5.0"
